refining the top nav and the left nav ui zones

--- a/client/views/nav/nav.html
+++ b/client/views/nav/nav.html
@@ -1,17 +1,23 @@
 <!-- application navigation -->
 <!-- add the class active to a parent li that you want to show as active -->
 <template name="nav">
-	<div class="span12">
-		<ul class="nav nav-pills">
-			<li>
-				<a href="#">New Quote</a>
-  			</li>
-			<li>
-  				<a href="#">Save</a>
-  			</li>
-  			<li>
-  				<a href="#">Delete</a>
-  			</li>
-  		</ul>
-	</div>
+  <div class="navbar navbar-inverse navbar-fixed-top">
+    
+    <div class="navbar-inner">
+      
+      <div class="container">
+        <div class="nav-collapse collapse">
+          <ul class="nav">
+            <li><a href="#">New Quote</a></li>
+            <li><a href="#">Save Work</a></li>
+            <li><a href="#">Delete</a></li>
+          </ul>
+        </div>
+      </div>
+    
+    </div>
+
+    
+
+  </div>
 </template>
