--- a/client/views/left_nav/left_nav.html
+++ b/client/views/left_nav/left_nav.html
@@ -1,12 +1,10 @@
 <!-- application left bar navigation -->
 <template name="left_nav">
-  
-  <ul class="nav nav-pills nav-stacked">
-    <li>
-      <a href="#">Add Row</a>
-    </li>
-    <li>
-      <a href="#">Add Section</a>
-    </li>
-  </ul>
+	<div class="span3 bs-docs-sidebar">
+		<ul class="nav nav-list">
+			<li><h4>Commands</h4></li>
+			<li><a href="#">Add Row Item</a></li>
+			<li><a href="#">Add Section</a></li>
+		</ul>
+	</div>
 </template>
