Styling of the left menu and beginnings of the list of the line item and amount boxes

--- a/client/views/left_nav/left_nav.html
+++ b/client/views/left_nav/left_nav.html
@@ -1,6 +1,6 @@
 <!-- application left bar navigation -->
 <template name="left_nav">
-	<div class="span3 bs-docs-sidebar">
+	<div class="span3 bs-docs-sidebar" id="left_bar">
 		<ul class="nav nav-list">
 			<li><h4>Commands</h4></li>
 			<li><a href="#">Add Row Item</a></li>
