--- a/client/views/main_ui/main_ui.html
+++ b/client/views/main_ui/main_ui.html
@@ -1,4 +1,22 @@
 <!-- application left bar navigation -->
 <template name="main_ui">
-  <h1>Something</h1>
+	
+	<div class="span8" id="main_list_ui">
+		<div class="span4">
+			<div class="input-prepend input-append">
+				<button class="btn" type="button">Delete</button>
+				<input class="span3" type="text" placeholder="Line item" />
+			</div>
+		</div>
+		
+		<div class="span3">
+			<div class="input-prepend input-append">
+				<span class="add-on">$</span>
+				<input class="span2" type="text" placeholder="xx.xx" />
+				<button class="btn" type="button">+</button>
+			</div>
+		</div>
+	
+	</div>
+
 </template>
