--- a/client/stylesheets/application.css
+++ b/client/stylesheets/application.css
@@ -1,5 +1,25 @@
 /* --- generic application wide styles --- */
 
+/* --- body container --- */
 #body_container {
 	padding-top: 100px;
+}
+
+/* --- left nav bar --- */
+#left_bar {
+	margin-right:20px;
+	background-color: #F8F8F8;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+}
+
+#left_bar h4 {
+	border-bottom: 1px solid #D8D8D8;
+	padding-bottom: 5px;
+}
+
+/* --- main table ui --- */
+#main_list_ui {
+	
 }
