removed the now uneeded nav.css file and stubbed out some functions for the left nav

--- a/client/views/left_nav/left_nav.html
+++ b/client/views/left_nav/left_nav.html
@@ -3,8 +3,8 @@
 	<div class="span3 bs-docs-sidebar" id="left_bar">
 		<ul class="nav nav-list">
 			<li><h4>Commands</h4></li>
-			<li><a href="#">Add Row Item</a></li>
-			<li><a href="#">Add Section</a></li>
+			<li><a id="btn_add_item" href="#">Add Row Item</a></li>
+			<li><a id="btn_create_section" href="#">Add Section</a></li>
 		</ul>
 	</div>
 </template>
