turned the ui body into a well - stubbed out the total html and styling

--- a/client/views/main_ui/main_ui.html
+++ b/client/views/main_ui/main_ui.html
@@ -1,10 +1,9 @@
 <!-- application left bar navigation -->
 <template name="main_ui">
 	
-	<div class="span8" id="main_list_ui">
-		<div class="span4">
+	<div class="span8 well well-small" id="main_list_ui">
+		<div class="span3">
 			<div class="input-prepend input-append">
-				<button class="btn" type="button">Delete</button>
 				<input class="span3" type="text" placeholder="Line item" />
 			</div>
 		</div>
@@ -12,11 +11,12 @@
 		<div class="span3">
 			<div class="input-prepend input-append">
 				<span class="add-on">$</span>
-				<input class="span2" type="text" placeholder="xx.xx" />
-				<button class="btn" type="button">+</button>
+				<input class="span2" type="text" placeholder="99.99" />
+				<button class="btn" type="button" title="toggle opperation">+</button>
 			</div>
+
 		</div>
-	
+		<button class="btn" type="button" title="Delete this row">Delete</button>
 	</div>
 
 </template>
