1) Total default text was changed to 00.00 2) Stubbed out event for updating a rows opperation 3) Testing out event bindings on pageReady instead of all js for main ui

--- a/client/views/main_ui/main_ui.html
+++ b/client/views/main_ui/main_ui.html
@@ -14,7 +14,7 @@
 			<div class="input-prepend input-append">
 				<span class="add-on">$</span>
 				<input class="span2 cost_input_field" type="text" placeholder="99.99" />
-				<button class="btn" type="button" title="toggle opperation">+</button>
+				<button class="btn toggle_opperation" type="button" title="toggle opperation" data-opperation="add">+</button>
 			</div>
 
 		</div>
