--- a/client/views/main_ui/main_ui.html
+++ b/client/views/main_ui/main_ui.html
@@ -1,11 +1,12 @@
 <!-- application left bar navigation -->
 <template name="main_ui">
+	{{#each rows}}
 	
 	<div class="span8 well well-small" id="main_list_ui">
 		<!-- text input field -->
 		<div class="span3">
 			<div class="input-prepend input-append">
-				<input class="span3" type="text" placeholder="Line item" />
+				<input class="span3" type="text" placeholder="Line item" value="{{label}}" />
 			</div>
 		</div>
 		
@@ -13,13 +14,14 @@
 		<div class="span3">
 			<div class="input-prepend input-append">
 				<span class="add-on">$</span>
-				<input class="span2 cost_input_field" type="text" placeholder="99.99" />
-				<button class="btn toggle_opperation" type="button" title="toggle opperation" data-opperation="add">+</button>
+				<input class="span2 cost_input_field" type="text" placeholder="99.99" value="{{amount}}" />
+				<button class="btn toggle_opperation" type="button" title="toggle opperation" data-opperation="{{opperation}}}">{{opperationSymbol}}</button>
 			</div>
 
 		</div>
 		<!-- delete button -->
-		<button class="btn" type="button" title="Delete this row">Delete</button>
+		<button class="btn delete_row" data-id="INSERT_UNIQUE_ROW_ID" type="button" title="Delete this row">Delete</button>
 	</div>
 
+	{{/each}}
 </template>
