--- a/client/views/total_info/total_info.html
+++ b/client/views/total_info/total_info.html
@@ -1,7 +1,7 @@
 <!-- application left bar navigation -->
 <template name="total_info">
 	
-	<div class="span8">
+	<div class="span12" id="total_amount_info">
 		<h3 class="pull-right">Total: $00.00</h3>
 	</div>
 
