1) Stubbed out some work on the total_info template - getting ready to read out the data to build the total sum

--- a/client/views/main_ui/main_ui.html
+++ b/client/views/main_ui/main_ui.html
@@ -6,7 +6,7 @@
 		<!-- text input field -->
 		<div class="span3" data-rowid="{{_id}}">
 			<div class="input-prepend input-append">
-				<input class="span3" type="text" placeholder="Line item" value="{{label}}" />
+				<input class="span3 label_input_field" type="text" placeholder="Line item" value="{{label}}" />
 			</div>
 		</div>
 		
