--- a/client/views/total_info/total_info.html
+++ b/client/views/total_info/total_info.html
@@ -2,7 +2,7 @@
 <template name="total_info">
 	
 	<div class="span12" id="total_amount_info">
-		<h3 class="pull-right">Total: $ {{total_amount}}</h3>
+		<h3 class="pull-right">Total: $ {{total}}</h3>
 	</div>
 
 </template>
