1) Built out the routine to build a value based off of the opperations and values from the row collection

--- a/client/views/total_info/total_info.html
+++ b/client/views/total_info/total_info.html
@@ -1,8 +1,8 @@
 <!-- application left bar navigation -->
 <template name="total_info">
-	
+
 	<div class="span12" id="total_amount_info">
-		<h3 class="pull-right">Total: $ {{total_amount}}</h3>
+		<h3 class="pull-right">Total: $ {{totalAmount}}</h3>
 	</div>
 
 </template>
