--- a/client/views/main_ui/main_ui.html
+++ b/client/views/main_ui/main_ui.html
@@ -4,24 +4,26 @@
 		
 		{{#each rows}}
 		<!-- text input field -->
-		<div class="span3" data-rowid="{{_id}}">
-			<div class="input-prepend input-append">
-				<input class="span3 label_input_field" type="text" placeholder="Line item" value="{{label}}" />
+		<div data-rowid="{{_id}}">
+			<div class="span3">
+				<div class="input-prepend input-append">
+					<input class="span3 label_input_field" type="text" placeholder="Line item" value="{{label}}" />
+				</div>
 			</div>
-		</div>
-		
-		<!-- amounts input field -->
-		<div class="span3">
-			<div class="input-prepend input-append">
-				<span class="add-on">$</span>
-				<input class="span2 cost_input_field" type="text" placeholder="99.99" value="{{amount}}" />
-				<button class="btn toggle_opperation" type="button" title="toggle opperation" data-opperation="{{opperation}}}">{{opperationSymbol}}</button>
-			</div>
+			
+			<!-- amounts input field -->
+			<div class="span3">
+				<div class="input-prepend input-append">
+					<span class="add-on">$</span>
+					<input class="span2 cost_input_field" type="text" placeholder="99.99" value="{{amount}}" />
+					<button class="btn toggle_opperation" type="button" title="toggle opperation" data-opperation="{{opperation}}}">{{opperationSymbol}}</button>
+				</div>
 
-		</div>
-		<!-- delete button -->
-		<div class="span1">
-			<button class="btn delete_row" type="button" title="Delete this row">Delete</button>
+			</div>
+			<!-- delete button -->
+			<div class="span1">
+				<button class="btn delete_row" type="button" title="Delete this row">Delete</button>
+			</div>
 		</div>
 		{{/each}}
 	
