commented out the add section command

--- a/client/views/left_nav/left_nav.html
+++ b/client/views/left_nav/left_nav.html
@@ -4,7 +4,7 @@
 		<ul class="nav nav-list">
 			<li><h4>Commands</h4></li>
 			<li><a id="btn_add_item" href="#">Add Row Item</a></li>
-			<li><a id="btn_create_section" href="#">Add Section</a></li>
+			<!-- <li><a id="btn_create_section" href="#">Add Section</a></li> -->
 		</ul>
 	</div>
 </template>
