documents are now selected by the new document that has been created

--- a/client/views/main_ui/main_ui.html
+++ b/client/views/main_ui/main_ui.html
@@ -7,7 +7,7 @@
 		{{#with documentInfo}}
 			{{#each rowData}}
 			<!-- text input field -->
-			<div data-rowid="{{_id}}">
+			<div>
 				<div class="span3">
 					<div class="input-prepend input-append">
 						<input class="span3 label_input_field" type="text" placeholder="Line item" value="{{label}}" />
