1) Fixed the query that builds out the list of rows 2) Rewired the updated attributes to the main_ui template 3) Updated the template call back to the each statement

--- a/client/views/main_ui/main_ui.html
+++ b/client/views/main_ui/main_ui.html
@@ -4,32 +4,29 @@
 		<!-- important note here that the data we are looping through is nested within -->
 		<!-- a document object - #with is being used as the base so we can loop and access other parts -->
 		<!-- of the object to build out the elements we need -->
-		{{#with documentInfo}}
-			{{#each rowData}}
-			<!-- text input field -->
-			<div>
-				<div class="span3">
-					<div class="input-prepend input-append">
-						<input class="span3 label_input_field" type="text" placeholder="Line item" value="{{label}}" />
-					</div>
-				</div>
-				
-				<!-- amounts input field -->
-				<div class="span3">
-					<div class="input-prepend input-append">
-						<span class="add-on">$</span>
-						<input class="span2 cost_input_field" type="text" placeholder="99.99" value="{{amount}}" />
-						<button class="btn toggle_opperation" type="button" title="toggle opperation" data-opperation="{{opperation}}}">{{opperationSymbol}}</button>
-					</div>
-
-				</div>
-				<!-- delete button -->
-				<div class="span1">
-					<button class="btn delete_row" type="button" title="Delete this row">Delete</button>
+		{{#each rowData}}
+		<!-- text input field -->
+		<div>
+			<div class="span3">
+				<div class="input-prepend input-append">
+					<input class="span3 label_input_field" type="text" placeholder="Line item" value="{{title}}" />
 				</div>
 			</div>
-			{{/each}}
-		{{/with}}
-	
+				
+			<!-- amounts input field -->
+			<div class="span3">
+				<div class="input-prepend input-append">
+					<span class="add-on">$</span>
+					<input class="span2 cost_input_field" type="text" placeholder="99.99" value="{{dollaAmount}}" />
+					<button class="btn toggle_opperation" type="button" title="toggle opperation">{{opperation}}</button>
+				</div>
+
+			</div>
+			<!-- delete button -->
+			<div class="span1">
+				<button class="btn delete_row" type="button" title="Delete this row">Delete</button>
+			</div>
+		</div>
+		{{/each}}
 	</div>
 </template>
