1) Needed to wrap rows in an array for manipulation 2) rewired the template to match the new data structure 3) add rows is working again eesh

--- a/client/views/main_ui/main_ui.html
+++ b/client/views/main_ui/main_ui.html
@@ -4,7 +4,8 @@
 		<!-- important note here that the data we are looping through is nested within -->
 		<!-- a document object - #with is being used as the base so we can loop and access other parts -->
 		<!-- of the object to build out the elements we need -->
-		{{#each rowData}}
+		{{#with rowData}}
+		{{#each rows}}
 		<!-- text input field -->
 		<div>
 			<div class="span3">
@@ -28,5 +29,6 @@
 			</div>
 		</div>
 		{{/each}}
+		{{/with}}
 	</div>
 </template>
