1) Fixed some styling issues with the total getting pushed down with the list of documents 2) Documents now load on users selection

--- a/client/views/total_info/total_info.html
+++ b/client/views/total_info/total_info.html
@@ -1,7 +1,7 @@
 <!-- application left bar navigation -->
 <template name="total_info">
 
-	<div class="span12" id="total_amount_info">
+	<div class="span5 pull-right" id="total_amount_info">
 		<h3 class="pull-right">Total: $ {{totalAmount}}</h3>
 	</div>
 
