App is getting crazy
1) Titles can now be updated...

--- a/client/stylesheets/application.css
+++ b/client/stylesheets/application.css
@@ -27,3 +27,10 @@
 #total_amount_info h3 {
 	padding-right:60px;
 }
+
+/* --- document title input text field --- */
+#document_title_input {
+	padding: 10px 10px 10px 20px;
+	width: 90%;
+	font-weight: 800;
+}
