1) quotes can be deleted - a new document will be found and set that as the session in use

--- a/client/views/nav/nav.html
+++ b/client/views/nav/nav.html
@@ -10,7 +10,7 @@
           <ul class="nav">
             <li><a href="#">New Quote</a></li>
             <li><a href="#">Save Work</a></li>
-            <li><a href="#">Delete</a></li>
+            <li><a id="btn_warn_user_of_delete" href="#">Delete</a></li>
           </ul>
         </div>
       </div>
