--- a/client/views/warning_message/warning_message.html
+++ b/client/views/warning_message/warning_message.html
@@ -12,7 +12,7 @@
 		</div>
   		<div class="modal-footer">
   			<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-    		<button id="btn_delete_document" class="btn btn-primary">Save changes</button>
+    		<button id="btn_delete_document" class="btn btn-primary">Screw Santa - Delete this thing</button>
 		</div>
 	</div>
 </template>
