updated warning message to something more suitable

--- a/client/views/warning_message/warning_message.html
+++ b/client/views/warning_message/warning_message.html
@@ -3,7 +3,7 @@
 	<div id="warn_window" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		<div class="modal-header">
   			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    		<h3 id="myModalLabel">Modal header</h3>
+    		<h3 id="myModalLabel">Warning Fair User - This Cannot Be Reversed!</h3>
 		</div>
   		<div class="modal-body">
   			<p>Are you sure you really really want to delete this quote?</p>
