--- a/client/views/nav/nav.html
+++ b/client/views/nav/nav.html
@@ -8,8 +8,8 @@
       <div class="container">
         <div class="nav-collapse collapse">
           <ul class="nav">
-            <li><a href="#">New Quote</a></li>
-            <li><a href="#">Save Work</a></li>
+            <li><a id="btn_create_new_blank_quote" href="#">New Quote</a></li>
+            <!-- <li><a href="#">Save Work</a></li> -->
             <li><a id="btn_warn_user_of_delete" href="#">Delete</a></li>
           </ul>
         </div>
